# Rust_media_server

./: .gitignore  README.md  pubspec.yaml
fluster_media_center/android/app/: build.gradle.kts
fluster_media_center/rust/src/: frb_generated.rs
fluster_media_center/rust_builder/macos/: rust_lib_fluster_media_center.podspec
fluster_media_center/web/: index.html
fluster_media_center/windows/runner/: Runner.rc  main.cpp
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_fluster_media_center.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/windows/: CMakeLists.txt
rust_media_server/: .gitignore  Cargo.toml
rust_media_server/src/: lib.rs  main.rs
rust_media_server/src/data_parser/: api_response_parser.rs  mod.rs
rust_media_server/src/db_interface/: data_saver.rs
rust_media_server/src/directory_explorer/: smb_explorer.rs
rust_media_server/src/media_retriever/: media_retriever.rs  mod.rs
rust_media_server/src/movie_data/: mod.rs  movie_data.rs
rust_media_server/src/os_interface/: file_interface.rs  mod.rs
rust_media_server/src/tmdb_client/: tmdb_client.rs
web/: manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
(+109 files in other folders)
