[package]
name = "rust_media_server"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
reqwest = { version = "0.13.2", features = ["query","json"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
smb = "0.11.1"
tokio = { version = "1.48.0", features = ["full"] }
trpl = "0.3.0"
