[package]
name = "rust_media_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
dirs = "6.0.0"
futures = "0.3.31"
futures-util = "0.3.32"
reqwest = { version = "0.13.2", features = ["query","json"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
smb = "0.11.1"
tokio = { version = "1.48.0", features = ["full"] }
tracing-log = "0.2.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
trpl = "0.3.0"
async-stream = "0.3.6"
